Fix dropdown menu appearing behind slider in Edge.

--- a/src/pd.theme/pd/theme/static/additional0002.css
+++ b/src/pd.theme/pd/theme/static/additional0002.css
@@ -600,7 +600,7 @@ table.plain td {
 }
 /*end ADDED VIA CMS*/
 
-/* Fix for Firefox and Chrome on Windows */
+/* Top Menu Fix for Firefox and Chrome on Windows */
 @media screen and (min-width: 1024px) and (max-width: 1120px) {
 .top-nav .navlevel0 > li > a {
     padding: 0 12px;
@@ -611,4 +611,13 @@ table.plain td {
     padding: 6px 12px;
     font-size: 12px;
 }
+}
+
+/*  */
+.site-header {
+    z-index: 1;
+}
+
+.off-canvas-content {
+    z-index: 0;
 }
